Fixing video spacing

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -267,7 +267,6 @@ progress,
 video {
   width: 100%;
   display: inline-block;
-  margin-bottom: $space-md;
 }
 
 audio:not([controls]) {
